# AlgoBot

./: AGENTS.md  Cargo.toml  README.md  keys.txt  setup.sh
config/: default.toml  production.toml
data/: algotrader.db  algotrader.db-shm  algotrader.db-wal
src/: error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  rest.rs  types.rs  websocket.rs
src/config/: mod.rs
src/db/: mod.rs  models.rs
src/risk/: manager.rs  mod.rs
src/strategy/: dynagrid.rs  mod.rs  types.rs
