[package]
name = "algotrader"
version = "0.1.0"
edition = "2021"
authors = ["AlgoTrader Developer"]
description = "Algorithmic trading bot for Bybit with Dynamic Hedge Grid strategy"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Crypto (HMAC SHA256 for auth)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# URL parsing
url = "2.5"

# Decimal precision for financial calculations
rust_decimal = { version = "1.33", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[bin]]
name = "algotrader"
path = "src/main.rs"
